[tool.poetry]
name = "mxcubecore"
version = "0.2.9"
description = "Core libraries for the MXCuBE application"
authors = ["The MXCuBE developers <mxcube@mxcube.org>"]
maintainers = ["ANSTO, Clayton Synchrotron"]
readme = "README.md"

[[tool.poetry.source]]
name = "cachedpypi"
url = "https://pypi.asci.synchrotron.org.au/root/pypi/+simple"
secondary = true

[[tool.poetry.source]]
name = "asci-dev"
url = "https://pypi.asci.synchrotron.org.au/asci/dev/+simple"
secondary = true

[[tool.poetry.source]]
name = "asci-prod"
url = "https://pypi.asci.synchrotron.org.au/asci/prod/+simple"
secondary = true

[[tool.poetry.source]]
name = "mx3dev"
url = "https://pypi.asci.synchrotron.org.au/mx3/dev/+simple"
secondary = true

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
gevent = "21.12.0"
greenlet = "1.1.2"
jsonpickle = "2.1.0"
jsonschema = "4.4.0"
lxml = "4.7.1"
matplotlib = "3.5.1"
ophyd = "1.6.4"
numpy = "1.21.4"
Pillow = "9.0.1"
pydantic = "1.9.0"
pyDispatcher = "2.0.5"
pyepics = "3.5.1"
suds-py3 = "1.4.5.0"
"ruamel.yaml" = "0.17.21"
scipy = "1.8.0"
click = "8.0.1"
bluesky-queueserver-api = "0.0.5"
zarr = "2.10.3"
setuptools = "62.1.0"
setuptools-scm = "6.3.2"
PIMS = "0.6.0"
mx3-beamline-library = "0.1.6"

[tool.poetry.dev-dependencies]
pre-commit = "2.17.0"
pylint = "2.12.2"
pytest = "7.0.1"
pytest-html = "3.1.1"
pytest-cov = "3.0.0"
black = "22.3.0"
Sphinx = "4.5.0"
sphinx-rtd-theme = "0.5.2"
alabaster = "0.7.12"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
