[project]
name = "mxcubecore"
version = "1.195.0.58"
description = "Core libraries for the MXCuBE application"
authors = [{ name = "The MXCuBE collaboration", email = "mxcube@esrf.fr" }]
requires-python = ">=3.11"
readme = "README.md"
license = "LGPL-3.0-or-later"
maintainers = [
    { name = "Marcus Oscarsson", email = "mxcube@esrf.fr" },
    { name = "Rasmus H. Fogh", email = "rhfogh@globalphasing.com" },
    { name = "Antonia Beteva", email = "beteva@esrf.fr" },
]
keywords = [
    "mxcube",
    "mxcube3",
    "mxcubecore",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typing-extensions>=4.3.0,<5",
    "gevent>=23.9.1,<24",
    "greenlet>=3.0.3,<4",
    "jsonpickle>=2.2.0,<3",
    "jsonschema>=4.17.1,<5",
    "lxml>=4.9.1,<5",
    "matplotlib>=3.6.2,<4",
    "numpy>=2.0.0,<3",
    "Pillow>=10.4.0,<11",
    "pydantic>=2.8.2,<2.11.0",
    "PyDispatcher>=2.0.6,<3",
    "ruamel.yaml>=0.17.21,<0.18",
    "scipy>=1.9.3,<2",
    "suds-py3==1.4.5.0",
    "psutil>=5.9.4,<6",
    "gipc>=1.6.0,<2",
    "py4j==0.10.9.7",
    "f90nml==1.4.4",
    "lucid3>=3.0.0,<4",
    "python-ldap>=3.4.0,<4",
    "requests>=2.31.0,<3",
    "colorama>=0.4.6,<0.5",
    "cachetools>=5.3.3",
    "mx3-beamline-library",
    "mxcube-video-streamer",
]

[project.optional-dependencies]
tango = ["PyTango>=9.3.6,<10"]
prefect = ["prefect==3.6.10 ; python_full_version >= '3.10'"]

[project.urls]
Homepage = "http://github.com/mxcube/mxcubecore"
Repository = "http://github.com/mxcube/mxcubecore"
Documentation = "https://mxcubecore.readthedocs.io/"

[dependency-groups]
dev = [
    "pre-commit>=3.5.0,<4",
    "pytest>=8.3.2,<9",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0,<4",
]
docs = [
    "furo>=2023.9.10,<2024",
    "myst-parser>=2.0.0,<3",
    "sphinx<7.2",
    "sphinx-last-updated-by-git>=0.3.7,<0.4",
    "sphinxcontrib-mermaid>=0.9.2,<0.10",
]

[tool.uv]
default-groups = "all"

[tool.uv.sources]
mx3-beamline-library = { git = "https://github.com/AustralianSynchrotron/mx3-beamline-library.git", rev = "v2.5.0" }
mxcube-video-streamer = { git = "https://github.com/AustralianSynchrotron/video-streamer.git", rev = "v1.8.4.2" }

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.autoflake]
#
# Exclude files below from autoflake checks until we get around fixing them.
# This way we can check that all other files are autoflake clean in CI.
#
exclude = """
deprecated/Command/Exporter/MDClient.py,
deprecated/HardwareObjects/Server/SimpleXMLReadWriteSupport.py,
deprecated/HardwareObjects/SpecShell.py,
deprecated/HardwareObjects/mockup/CameraMockup.py,
mxcubecore/HardwareObjects/ALBA/ALBAFastShutter.py,
mxcubecore/HardwareObjects/ALBA/ALBAFrontEnd.py,
mxcubecore/HardwareObjects/ALBA/ALBAMachineInfo.py,
mxcubecore/HardwareObjects/ALBA/ALBASupervisor.py,
mxcubecore/HardwareObjects/ALBA/XalocMachineInfo.py,
mxcubecore/HardwareObjects/EMBL/EMBLBeamline.py,
mxcubecore/HardwareObjects/EMBL/EMBLBeamlineTest.py,
mxcubecore/HardwareObjects/EMBL/EMBLFlux.py,
mxcubecore/HardwareObjects/EMBL/EMBLPiezoMotor.py,
mxcubecore/HardwareObjects/EMBL/EMBLXrayImaging.py,
mxcubecore/HardwareObjects/EMBL/TINEMotor.py,
mxcubecore/HardwareObjects/ESRF/ID30A1MultiCollect.py,
mxcubecore/HardwareObjects/ESRF/queue_entry/ssx_chip_collection.py,
mxcubecore/HardwareObjects/ESRF/queue_entry/ssx_injector_collection.py,
mxcubecore/HardwareObjects/LNLS/EPICSActuator.py,
mxcubecore/HardwareObjects/LNLS/LNLSCollect.py,
mxcubecore/HardwareObjects/LNLS/LNLSDetDistMotor.py,
mxcubecore/HardwareObjects/Lima2Detector.py,
mxcubecore/HardwareObjects/MAXIV/MAXIVAutoProcessing.py,
mxcubecore/HardwareObjects/MAXIV/autoProcLauncher.py,
mxcubecore/HardwareObjects/MAXIV/ednaProcLauncher.py,
mxcubecore/HardwareObjects/SOLEIL/PX1/PX1Configuration.py,
mxcubecore/HardwareObjects/SOLEIL/PX1/PX1Energy.py,
mxcubecore/HardwareObjects/SOLEIL/PX1/PX1Resolution.py,
mxcubecore/HardwareObjects/SOLEIL/PX2/PX2Collect.py,
mxcubecore/HardwareObjects/SOLEIL/PX2/PX2Qt4_LimaVideo.py,
mxcubecore/HardwareObjects/SOLEIL/PX2/PX2Resolution.py,
mxcubecore/HardwareObjects/SOLEIL/PX2/PX2Video.py,
mxcubecore/HardwareObjects/SOLEIL/SOLEILMachineInfo.py,
mxcubecore/HardwareObjects/SOLEIL/SOLEILPss.py,
mxcubecore/HardwareObjects/SOLEIL/SOLEILqueue_entry.py,
mxcubecore/HardwareObjects/TangoLimaMpegVideo.py,
mxcubecore/HardwareObjects/XSDataMXCuBEv1_4.py,
mxcubecore/HardwareObjects/XSDataMXv1.py,
"""

[tool.black]
line-length = 88
include = '\.pyi?$'
force-exclude = '''
(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
#
# Exclude files below from black checks until we get around fixing them.
# This way we can check that all other files are black clean in CI.
#
  | deprecated/HardwareObjects/SpecScan.py
  | deprecated/HardwareObjects/mockup/MultiCollectMockup.py
  | mxcubecore/HardwareObjects/ALBA/ALBAEpsActuator.py
  | mxcubecore/HardwareObjects/ALBA/ALBAFastShutter.py
  | deprecated/HardwareObjects/Server/__init__.py
  | mxcubecore/HardwareObjects/ALBA/ALBAFlux.py
  | mxcubecore/HardwareObjects/ALBA/ALBACats.py
  | mxcubecore/HardwareObjects/ALBA/ALBAPilatus.py
  | mxcubecore/HardwareObjects/ALBA/XalocMiniDiff.py
  | mxcubecore/HardwareObjects/DESY/P11BackLight.py
  | mxcubecore/HardwareObjects/ALBA/ALBACollect.py
  | mxcubecore/HardwareObjects/DESY/P11DetectorCover.py
  | mxcubecore/HardwareObjects/Beamline.py
  | mxcubecore/HardwareObjects/DESY/P11DetectorDistance.py
  | mxcubecore/HardwareObjects/DESY/P11Shutter.py
  | mxcubecore/HardwareObjects/EMBL/EMBLAperture.py
  | mxcubecore/HardwareObjects/EMBL/EMBLBSD.py
  | mxcubecore/HardwareObjects/DESY/P11Collect.py
  | mxcubecore/HardwareObjects/EMBL/EMBLBeamline.py
  | mxcubecore/HardwareObjects/EMBL/EMBLBeamFocusing.py
  | mxcubecore/HardwareObjects/EMBL/EMBLBeamCentering.py
  | mxcubecore/HardwareObjects/EMBL/EMBLBeamstop.py
  | mxcubecore/HardwareObjects/EMBL/EMBLBeamlineTest.py
  | mxcubecore/HardwareObjects/EMBL/EMBLCRL.py
  | mxcubecore/HardwareObjects/DESY/P11NanoDiff.py
  | mxcubecore/HardwareObjects/EMBL/EMBLDoorInterlock.py
  | mxcubecore/HardwareObjects/EMBL/EMBLDetector.py
  | mxcubecore/HardwareObjects/EMBL/EMBLCollect.py
  | mxcubecore/HardwareObjects/EMBL/EMBLEnergy.py
  | mxcubecore/HardwareObjects/EMBL/EMBLEnergyScan.py
  | mxcubecore/HardwareObjects/EMBL/EMBLFlux.py
  | mxcubecore/HardwareObjects/EMBL/EMBLMachineInfo.py
  | mxcubecore/HardwareObjects/EMBL/EMBLMotorsGroup.py
  | mxcubecore/HardwareObjects/EMBL/EMBLSafetyShutter.py
  | mxcubecore/HardwareObjects/EMBL/EMBLSSXChip.py
  | mxcubecore/HardwareObjects/EMBL/EMBLTransfocator.py
  | mxcubecore/HardwareObjects/EMBL/EMBLMiniDiff.py
  | mxcubecore/HardwareObjects/EMBL/MDFastShutter.py
  | mxcubecore/HardwareObjects/EMBL/EMBLSlitBox.py
  | mxcubecore/HardwareObjects/EMBL/TINEMotor.py
  | mxcubecore/HardwareObjects/EMBL/EMBLOnlineProcessing.py
  | mxcubecore/HardwareObjects/ESRF/ID231BeamCmds.py
  | mxcubecore/HardwareObjects/ESRF/ID232BeamDefiner.py
  | mxcubecore/HardwareObjects/ESRF/ESRFEnergyScan.py
  | mxcubecore/HardwareObjects/ESRF/ESRFMultiCollect.py
  | mxcubecore/HardwareObjects/ESRF/ID29EnergyScan.py
  | mxcubecore/HardwareObjects/ESRF/ID232MultiCollect.py
  | mxcubecore/HardwareObjects/ESRF/ID29MultiCollect.py
  | mxcubecore/HardwareObjects/ESRF/ID30BBeamCmds.py
  | mxcubecore/HardwareObjects/ESRF/ESRFMetadataManagerClient.py
  | mxcubecore/HardwareObjects/ESRF/ID30BPhotonFlux.py
  | mxcubecore/HardwareObjects/ESRF/ID30A3MultiCollect.py
  | mxcubecore/HardwareObjects/ESRF/Oxford700.py
  | mxcubecore/HardwareObjects/ESRF/ID29XRFSpectrum.py
  | mxcubecore/HardwareObjects/GenericDiffractometer.py
  | mxcubecore/HardwareObjects/LNLS/EPICSActuator.py
  | mxcubecore/HardwareObjects/LNLS/EPICSMotor.py
  | mxcubecore/HardwareObjects/LNLS/LNLSAperture.py
  | mxcubecore/HardwareObjects/LNLS/EPICSNState.py
  | mxcubecore/HardwareObjects/LNLS/LNLSBeam.py
  | mxcubecore/HardwareObjects/LNLS/LNLSDetDistMotor.py
  | mxcubecore/HardwareObjects/LNLS/LNLSCamera.py
  | mxcubecore/HardwareObjects/LNLS/LNLSEnergy.py
  | mxcubecore/HardwareObjects/LNLS/LNLSDiffractometer.py
  | mxcubecore/HardwareObjects/LNLS/LNLSTransmission.py
  | mxcubecore/HardwareObjects/LNLS/LNLSZoom.py
  | mxcubecore/HardwareObjects/LNLS/LNLSPilatusDet.py
  | mxcubecore/HardwareObjects/LNLS/read_transmission_mnc.py
  | mxcubecore/HardwareObjects/LNLS/set_transmission_mnc.py
  | mxcubecore/HardwareObjects/Lima2Detector.py
  | mxcubecore/HardwareObjects/ISPyBClient.py
  | mxcubecore/HardwareObjects/PlateManipulatorMaintenance.py
  | mxcubecore/HardwareObjects/SOLEIL/PX1/PX1Cryotong.py
  | mxcubecore/HardwareObjects/PlateManipulator.py
  | mxcubecore/HardwareObjects/SOLEIL/PX2/PX2Resolution.py
  | mxcubecore/HardwareObjects/SOLEIL/PX1/PX1Pilatus.py
  | mxcubecore/HardwareObjects/SOLEIL/PX2/PX2Collect.py
  | mxcubecore/HardwareObjects/SOLEIL/TangoDCMotor.py
  | mxcubecore/HardwareObjects/SOLEIL/PX1/PX1Collect.py
  | mxcubecore/HardwareObjects/SOLEIL/SOLEILMachineInfo.py
  | mxcubecore/HardwareObjects/TangoMotor.py
  | mxcubecore/HardwareObjects/abstract/AbstractDetector.py
  | mxcubecore/HardwareObjects/abstract/sample_changer/Crims.py
  | mxcubecore/HardwareObjects/abstract/AbstractCollect.py
  | mxcubecore/HardwareObjects/mockup/MotorMockup.py
  | mxcubecore/HardwareObjects/mockup/ShutterMockup.py
  | mxcubecore/Poller.py
  | mxcubecore/HardwareObjects/mockup/PlateManipulatorMockup.py
  | mxcubecore/HardwareObjects/XSDataMXCuBEv1_4.py
  | mxcubecore/HardwareObjects/XSDataMXv1.py
)
'''
